[gd_scene load_steps=12 format=2]

[ext_resource path="res://graphics/sprite/blacksmith.png" type="Texture" id=1]
[ext_resource path="res://font/UI_s.tres" type="DynamicFont" id=2]
[ext_resource path="res://graphics/bg/blacksmith/blacksmith.jpg" type="Texture" id=3]
[ext_resource path="res://scene/menu/town/blacksmith/blacksmith.gd" type="Script" id=4]
[ext_resource path="res://scene/menu/town/blacksmith/Start_State.gd" type="Script" id=5]
[ext_resource path="res://font/UI.tres" type="DynamicFont" id=6]
[ext_resource path="res://scene/menu/town/blacksmith/Lbl_Dialogue.gd" type="Script" id=7]
[ext_resource path="res://scene/menu/town/blacksmith/Leave_State.gd" type="Script" id=8]
[ext_resource path="res://scene/component/loading_screen/loading_screen.tscn" type="PackedScene" id=9]
[ext_resource path="res://scene/component/color_picker/ColorPicker.tscn" type="PackedScene" id=10]
[ext_resource path="res://scene/menu/town/blacksmith/Select_State.gd" type="Script" id=11]

[node name="Blacksmith" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bg_Guild" type="Sprite" parent="."]
position = Vector2( 639.146, 361.208 )
scale = Vector2( 1.32226, 1.05818 )
texture = ExtResource( 3 )

[node name="Spr_Blacksmith" type="Sprite" parent="."]
position = Vector2( 932.773, 436.254 )
scale = Vector2( 0.59208, 0.59208 )
texture = ExtResource( 1 )

[node name="Pnl_Dialogue" type="Panel" parent="."]
self_modulate = Color( 1, 1, 1, 0.882353 )
margin_left = 80.0
margin_top = 480.0
margin_right = 1200.0
margin_bottom = 700.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Lbl_Dialogue" type="Label" parent="Pnl_Dialogue"]
margin_left = 50.0
margin_top = 30.0
margin_right = 1080.0
margin_bottom = 190.0
custom_fonts/font = ExtResource( 2 )
text = "dialogue text"
autowrap = true
clip_text = true
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start_State" type="Control" parent="."]
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Btn_Select" type="Button" parent="Start_State"]
margin_left = 80.0
margin_top = 230.0
margin_right = 720.0
margin_bottom = 310.0
rect_pivot_offset = Vector2( 230, 20 )
custom_fonts/font = ExtResource( 2 )
text = "Change Armor Color"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Btn_Leave" type="Button" parent="Start_State"]
margin_left = 80.0
margin_top = 340.0
margin_right = 720.0
margin_bottom = 420.0
rect_pivot_offset = Vector2( 230, 20 )
custom_fonts/font = ExtResource( 2 )
text = "Leave"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Join_State" type="Control" parent="."]
visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HR_JoinGuild" type="HTTPRequest" parent="Join_State"]

[node name="Pnl_InviteCode" type="Panel" parent="Join_State"]
margin_left = 80.0
margin_top = 130.0
margin_right = 720.0
margin_bottom = 440.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LE_InviteCode" type="LineEdit" parent="Join_State/Pnl_InviteCode"]
margin_left = 130.0
margin_top = 60.0
margin_right = 510.0
margin_bottom = 135.0
custom_fonts/font = ExtResource( 6 )
align = 1
max_length = 6
placeholder_text = "Code"
caret_blink = true

[node name="Btn_ICDone" type="Button" parent="Join_State/Pnl_InviteCode"]
margin_left = 340.0
margin_top = 200.0
margin_right = 550.0
margin_bottom = 266.0
custom_fonts/font = ExtResource( 2 )
text = "Done"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Btn_ICBack" type="Button" parent="Join_State/Pnl_InviteCode"]
margin_left = 90.0
margin_top = 200.0
margin_right = 300.0
margin_bottom = 266.0
custom_fonts/font = ExtResource( 2 )
text = "Back"

[node name="Select_State" type="Control" parent="."]
margin_right = 1280.0
margin_bottom = 719.0
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HR_FetchGuilds" type="HTTPRequest" parent="Select_State"]

[node name="Btn_SSBack" type="Button" parent="Select_State"]
margin_left = 149.052
margin_top = 396.0
margin_right = 359.052
margin_bottom = 462.0
custom_fonts/font = ExtResource( 2 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Btn_SSDone" type="Button" parent="Select_State"]
margin_left = 444.757
margin_top = 396.0
margin_right = 654.757
margin_bottom = 462.0
custom_fonts/font = ExtResource( 2 )
text = "Select"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorPicker" parent="Select_State" instance=ExtResource( 10 )]
margin_left = 473.557
margin_top = 370.202
margin_right = -490.443
margin_bottom = -63.7981
rect_rotation = 180.0
rect_scale = Vector2( 1.25, 1.25 )

[node name="Leave_State" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Btn_Leave" type="Button" parent="Leave_State"]
self_modulate = Color( 1, 1, 1, 0 )
margin_right = 1280.0
margin_bottom = 720.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cpn_Loading" parent="." instance=ExtResource( 9 )]
visible = false
[connection signal="button_up" from="Start_State/Btn_Select" to="." method="_on_Btn_Select_button_up"]
[connection signal="button_up" from="Start_State/Btn_Leave" to="." method="_on_Btn_Leave_button_up"]
[connection signal="request_completed" from="Join_State/HR_JoinGuild" to="Join_State" method="_on_HR_JoinGuild_request_completed"]
[connection signal="button_up" from="Join_State/Pnl_InviteCode/Btn_ICDone" to="Join_State" method="_on_Btn_ICDone_button_up"]
[connection signal="button_up" from="Join_State/Pnl_InviteCode/Btn_ICBack" to="." method="_on_Btn_Back_button_up"]
[connection signal="visibility_changed" from="Select_State" to="Select_State" method="_on_Select_State_visibility_changed"]
[connection signal="request_completed" from="Select_State/HR_FetchGuilds" to="Select_State" method="_on_HR_FetchGuilds_request_completed"]
[connection signal="button_up" from="Select_State/Btn_SSBack" to="." method="_on_Btn_Back_button_up"]
[connection signal="button_up" from="Select_State/Btn_SSDone" to="Select_State" method="_on_Btn_SSDone_button_up"]
[connection signal="button_down" from="Leave_State/Btn_Leave" to="Leave_State" method="_on_Btn_Leave_button_down"]
